fix direction and alignment of items

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 30px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,14 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.middle-section {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.middle-section div {
+  max-width: 200px;
 }
